--- a/src/app/componentes/agenda/nuevo-agenda/nuevo-agenda.component.html
+++ b/src/app/componentes/agenda/nuevo-agenda/nuevo-agenda.component.html
@@ -12,32 +12,32 @@
 
       <div class="form-group mb-3">
         <label for="paciente" class="form-label">Paciente</label>
-        <select class="form-select" id="paciente" name="paciente"
+        <ng-select class="form-select" id="paciente" name="paciente"
                 [(ngModel)]="agenda.id_paciente" required>
-          <option class="tipo_agenda_option"
+          <ng-option class="tipo_agenda_option"
                   *ngFor="let paciente of pacientes"
-                  [value]="paciente.id">{{ paciente.id_persona.nombre }} {{ paciente.id_persona.apellidos }}</option>
-        </select>
+                  [value]="paciente.id">{{ paciente.id_persona.nombre }} {{ paciente.id_persona.apellidos }}</ng-option>
+        </ng-select>
       </div>
 
       <div class="form-group mb-3">
         <label for="tipo_agenda" class="form-label">Tipo de agenda</label>
-        <select class="form-select" id="tipo_agenda" name="tipo_agenda"
+        <ng-select class="form-select" id="tipo_agenda" name="tipo_agenda"
                 [(ngModel)]="agenda.id_tipo_agenda" required>
-          <option class="tipo_agenda_option"
+          <ng-option class="tipo_agenda_option"
                   *ngFor="let tipo_agenda of tipos_agenda"
-                  [value]="tipo_agenda.id">{{ tipo_agenda.nombre }}</option>
-        </select>
+                  [value]="tipo_agenda.id">{{ tipo_agenda.nombre }}</ng-option>
+        </ng-select>
       </div>
 
       <div class="form-group mb-3">
         <label for="persona_contacto" class="form-label">Persona de contacto</label>
-        <select class="form-select" id="persona_contacto" name="persona_contacto"
+        <ng-select class="form-select" id="persona_contacto" name="persona_contacto"
                 [(ngModel)]="agenda.id_persona" required>
-          <option class="tipo_agenda_option"
+          <ng-option class="tipo_agenda_option"
                   *ngFor="let persona of personas_contacto"
-                  [value]="persona.id">{{ persona.nombre }} {{ persona.apellidos }}</option>
-        </select>
+                  [value]="persona.id">{{ persona.nombre }} {{ persona.apellidos }}</ng-option>
+        </ng-select>
       </div>
 
       <div class="form-group mb-3">
