--- a/src/app/componentes/alarma/crear-alarma-terminal/crear-alarma-terminal.component.html
+++ b/src/app/componentes/alarma/crear-alarma-terminal/crear-alarma-terminal.component.html
@@ -11,19 +11,19 @@
     <form #crearAlarmaForm="ngForm">
       <div class="form-group mb-3">
         <label for="tipos_alarma" class="form-label">Tipo de alarma</label>
-        <select class="form-select" id="tipos_alarma" name="tipos_alarma"
+        <ng-select class="form-select" id="tipos_alarma" name="tipos_alarma"
                 [(ngModel)]="alarma.id_tipo_alarma" required>
-          <option *ngFor="let tipo_alarma of tipos_alarmas; let i = index"
-                  [value]="tipo_alarma.id">{{tipo_alarma.nombre}}</option>
-        </select>
+          <ng-option *ngFor="let tipo_alarma of tipos_alarmas; let i = index"
+                  [value]="tipo_alarma.id">{{tipo_alarma.nombre}}</ng-option>
+        </ng-select>
       </div>
             <div class="form-group mb-3">
               <label for="terminal" class="form-label">Terminal</label>
-              <select class="form-select" id="terminal" name="terminal"
+              <ng-select class="form-select" id="terminal" name="terminal"
                       [(ngModel)]="alarma.id_terminal" required>
-                <option class="relacion_recurso_option" *ngFor="let terminal of terminales; let i = index"
-                        [value]="terminal.id">{{terminal.numero_terminal}} -- {{terminal.id_titular.id_persona.nombre}} {{terminal.id_titular.id_persona.apellidos}} </option>
-              </select>
+                <ng-option class="relacion_recurso_option" *ngFor="let terminal of terminales; let i = index"
+                        [value]="terminal.id">{{terminal.numero_terminal}} -- {{terminal.id_titular.id_persona.nombre}} {{terminal.id_titular.id_persona.apellidos}} </ng-option>
+              </ng-select>
             </div>
 
 
