--- a/src/app/componentes/alarma/crear-alarma-ucr/crear-alarma-ucr.component.html
+++ b/src/app/componentes/alarma/crear-alarma-ucr/crear-alarma-ucr.component.html
@@ -12,19 +12,19 @@
 
         <div class="form-group mb-3">
           <label for="tipos_alarma" class="form-label">Tipo de alarma</label>
-          <select class="form-select" id="tipos_alarma" name="tipos_alarma"
+          <ng-select class="form-select" id="tipos_alarma" name="tipos_alarma"
                   [(ngModel)]="alarma.id_tipo_alarma" required>
-            <option *ngFor="let tipo_alarma of tipos_alarmas; let i = index"
-                    [value]="tipo_alarma.id">{{tipo_alarma.nombre}}</option>
-          </select>
+            <ng-option *ngFor="let tipo_alarma of tipos_alarmas; let i = index"
+                    [value]="tipo_alarma.id">{{tipo_alarma.nombre}}</ng-option>
+          </ng-select>
         </div>
       <div class="form-group mb-3">
           <label for="paciente" class="form-label">Paciente UCR</label>
-          <select class="form-select" id="paciente" name="paciente"
+          <ng-select class="form-select" id="paciente" name="paciente"
                   [(ngModel)]="alarma.id_paciente_ucr" required>
-            <option *ngFor="let paciente of pacientes_ucr; let i = index"
-                    [value]="paciente.id">{{paciente.numero_expediente}} -- {{paciente.id_persona.nombre}} {{paciente.id_persona.apellidos}}</option>
-          </select>
+            <ng-option *ngFor="let paciente of pacientes_ucr; let i = index"
+                    [value]="paciente.id">{{paciente.numero_expediente}} -- {{paciente.id_persona.nombre}} {{paciente.id_persona.apellidos}}</ng-option>
+          </ng-select>
         </div>
 
 
