25/03 - Modificacion del navegador + selectores

--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -18,36 +18,36 @@
 
     <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample09">
       <ul class="navbar-nav px-5" id="ulPrincipal1">
-        <li class="nav border-bottom">
+        <li class="nav p-1 mr-1">
           <a class="nav-link" href="#" [routerLink]="['/']" data-bs-toggle="dropdown" aria-expanded="false" >
             Usuarios del sistema
           </a>
         </li>
 
-        <li class="nav border-bottom">
+        <li class="nav p-1 mr-1">
           <a class="nav-link " href="#" [routerLink]="['/']">
             Usuarios del servicio
           </a>
         </li>
 
-        <li class="nav border-bottom">
+        <li class="nav p-1  mr-1">
           <a class="nav-link " href="#" [routerLink]="['/']">
             Recursos
           </a>
         </li>
 
-        <li class="nav border-bottom">
+        <li class="nav p-1 mr-1">
           <a class="nav-link" href="#" [routerLink]="['/']">
             Agenda
           </a>
         </li>
 
-        <li class="nav border-bottom">
+        <li class="nav p-1 mr-1">
           <a class="nav-link" href="#"  [routerLink]="['/']">
             Alarmas
           </a>
         </li>
-        <li class="nav border-bottom">
+        <li class="nav p-1 mr-1 ">
           <a class="nav-link" href="#" [routerLink]="['/']">
             Copia de seguridad
           </a>
