--- a/src/styles.scss
+++ b/src/styles.scss
@@ -127,22 +127,30 @@ table {
   }
 
   .form-label{
-    float: left;
-    margin-left: 10px;
+    text-align: left;
+    display: block;
   }
 
   .alert {
     padding: 5px;
     margin-top: 20px;
+
+
+  }
+
+  .ng-select{
+    position: relative;
+    border-radius: 5px;
+    text-align: left;
+    display: inline-block;
+    width: 100%;
+    box-sizing: border-box;
   }
 
   .ng-select .ng-arrow-wrapper{
     display: none;
   }
 
-  .ng-select-container{
-    margin-left: -5px;
-  }
 }
 
 .form-group-check {
@@ -590,4 +598,8 @@ footer {
 
 .table>:not(:last-child)>:last-child>* {
   white-space: nowrap;
+}
+
+#ulPrincipal1 li{
+  border-right: 1px solid rgba(0,0,0,.15);
 }
