Creamos el spinner y terminado solo falta retocar posicionamiento y estilo del spinner

--- a/src/app/componentes/header/header.component.scss
+++ b/src/app/componentes/header/header.component.scss
@@ -5,3 +5,12 @@
   max-width: 1200px;
 }
 
+.spinner {
+  position: fixed;
+  top: 21vh;
+  right: 5vh;
+  z-index: 100;
+}
+.spinner>img{
+  width: 100px;
+}
