--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -62,6 +62,9 @@
       </ul>
     </div>
   </div>
+  <div class="spinner d-none">
+    <img src="https://media.tenor.com/hlKEXPvlX48AAAAi/loading-loader.gif"/>
+  </div>
 </nav>
 
 <nav *ngIf="isLoggedIn" class="navbar navbar-expand-lg navbar-light bg-light" aria-label="Tenth navbar example">
