Termino duplicacion de peticion , faltar por terminar ayudas de alertas , hecho todo menos el 1, 5 y el diseño de de las ayudas

--- a/src/app/componentes/alarma/lista-alarmas/lista-alarmas.component.html
+++ b/src/app/componentes/alarma/lista-alarmas/lista-alarmas.component.html
@@ -14,7 +14,9 @@
           <input id="campoBusqueda" type="text" class="form-control" placeholder="Busqueda..." [(ngModel)]="inputBusqueda">
         </div>
       </div>
-
+      <div class="col-4 d-flex justify-content-end">
+        <button class="btn btn-success" [routerLink]="['/alarmas/boton_info_ayudas']"  >Ayuda</button>
+      </div>
       <div class="col-4 d-flex justify-content-end">
         <button class="btn btn-success" [routerLink]="['/alarmas/nueva']" *ngIf="isAdmin">Crear Alarma</button>
       </div>
