--- a/src/app/componentes/alarma/lista-alarmas/lista-alarmas.component.html
+++ b/src/app/componentes/alarma/lista-alarmas/lista-alarmas.component.html
@@ -6,16 +6,14 @@
         <li class="breadcrumb-item active" aria-current="page">Alarmas</li>
       </ol>
     </nav>
-    <h1 class="component-title">Alarmas</h1>
+    <h1 class="component-title">Alarmas<button class="btn btn-warning m-4" [routerLink]="['/boton_info_ayudas','listado_alarmas']"  >?</button></h1>
+
     <div class="m-2 row">
 
       <div class="col-8 d-flex justify-content-end">
         <div class="col-6">
           <input id="campoBusqueda" type="text" class="form-control" placeholder="Busqueda..." [(ngModel)]="inputBusqueda">
         </div>
-      </div>
-      <div class="col-4 d-flex justify-content-end">
-        <button class="btn btn-success" [routerLink]="['/alarmas/boton_info_ayudas']"  >Ayuda</button>
       </div>
       <div class="col-4 d-flex justify-content-end">
         <button class="btn btn-success" [routerLink]="['/alarmas/nueva']" *ngIf="isAdmin">Crear Alarma</button>
