--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -62,7 +62,7 @@
       </ul>
     </div>
   </div>
-  <div class="spinner ">
+  <div class="spinner d-none ">
     <img src="https://media.tenor.com/hlKEXPvlX48AAAAi/loading-loader.gif"/>
   </div>
 </nav>
