--- a/src/app/componentes/alarma/lista-alarmas/lista-alarmas.component.html
+++ b/src/app/componentes/alarma/lista-alarmas/lista-alarmas.component.html
@@ -7,64 +7,67 @@
       </ol>
     </nav>
 
-    <h1 class="component-title">Alarmas</h1>
 
     <div class="m-2 row">
 
-    <h1 class="component-title">
-      {{ fecha }}
-      <button class="btn btn-warning m-4" [routerLink]="['/boton_info_ayudas','listado_alarmas']"  >?</button>
-    </h1>
+      <h1 class="component-title">
+        {{ fecha }}
+        <button class="btn btn-warning ml-2" [routerLink]="['/boton_info_ayudas','listado_alarmas']">?</button>
+
+      </h1>
 
 
-    <div style="display: none" id="actualizarPagina"></div>
-    <div class="form-group mb-3">
-      <input id="campoBusqueda" type="text" class="form-control" placeholder="Busqueda..." [(ngModel)]="inputBusqueda">
-    </div>
-
-    <div class="row mb-2 d-flex justify-content-end pad">
-      <div class="col p-0"></div>
-      <div class="col-5 form-group m-0 p-0">
-      <label for="busquedaPorFecha">Búsqueda por fecha</label>
-      <input id="busquedaPorFecha" name="busquedaPorFecha" type="date" class="form-control"
-      (ngModelChange)="buscarPorFecha($event)" [(ngModel)]="inputFechaBusqueda">
+      <div style="display: none" id="actualizarPagina"></div>
+      <div class="form-group mb-3">
+        <input id="campoBusqueda" type="text" class="form-control" placeholder="Busqueda..."
+               [(ngModel)]="inputBusqueda">
       </div>
 
-      <div class="col p-0 d-flex align-items-end justify-content-end">
+      <div class="row mb-2 d-flex justify-content-end pad">
+        <div class="col p-0"></div>
+        <div class="col-5 form-group m-0 p-0">
+          <label for="busquedaPorFecha">Búsqueda por fecha</label>
+          <input id="busquedaPorFecha" name="busquedaPorFecha" type="date" class="form-control"
+                 (ngModelChange)="buscarPorFecha($event)" [(ngModel)]="inputFechaBusqueda">
+        </div>
 
-        <button class="btn btn-success" [routerLink]="['/alarmas/nueva']" *ngIf="isAdmin">Crear Alarma</button>
+        <div class="col p-0 d-flex align-items-end justify-content-end">
+
+          <button class="btn btn-success" [routerLink]="['/alarmas/nueva']" *ngIf="isAdmin">Crear Alarma</button>
+        </div>
+
       </div>
 
-    </div>
 
+      <div class="table-responsive m-2">
+        <table id="tableList" class="table table-hover text-center">
+          <thead>
+          <tr class="table-purple">
+            <th (click)="ordenacionTabla(0, 'string')" scope="col">Estado</th>
+            <th (click)="ordenacionTabla(1, 'string')" scope="col">Hora Registro</th>
+            <th (click)="ordenacionTabla(2, 'string')" scope="col">Observaciones</th>
+            <th (click)="ordenacionTabla(3, 'string')" scope="col">Resumen</th>
+            <th (click)="ordenacionTabla(4, 'string')" scope="col">Tipo alarma</th>
+            <th (click)="ordenacionTabla(5, 'string')" scope="col">Paciente UCR</th>
+            <th (click)="ordenacionTabla(6, 'string')" scope="col">Número Terminal</th>
+            <th (click)="ordenacionTabla(7, 'string')" scope="col">Teleoperador</th>
+            <th></th>
+          </tr>
+          </thead>
+          <tbody>
 
-    <div class="table-responsive m-2">
-      <table id="tableList" class="table table-hover text-center">
-        <thead>
-        <tr class="table-purple">
-          <th (click)="ordenacionTabla(0, 'string')" scope="col">Estado</th>
-          <th (click)="ordenacionTabla(1, 'string')" scope="col">Hora Registro</th>
-          <th (click)="ordenacionTabla(2, 'string')" scope="col">Observaciones</th>
-          <th (click)="ordenacionTabla(3, 'string')" scope="col">Resumen</th>
-          <th (click)="ordenacionTabla(4, 'string')" scope="col">Tipo alarma</th>
-          <th (click)="ordenacionTabla(5, 'string')" scope="col">Paciente UCR</th>
-          <th (click)="ordenacionTabla(6, 'string')" scope="col">Número Terminal</th>
-          <th (click)="ordenacionTabla(7, 'string')" scope="col">Teleoperador</th>
-          <th></th>
-        </tr>
-        </thead>
-        <tbody>
-
-        <tr *ngFor="let alarma of alarmasDelDia| filtroBusqueda: inputBusqueda | paginate: { itemsPerPage: 10, currentPage: numPaginacion }"
+          <tr
+            *ngFor="let alarma of alarmasDelDia| filtroBusqueda: inputBusqueda | paginate: { itemsPerPage: 10, currentPage: numPaginacion }"
             app-item-alarma [alarma]="alarma" class="{{seleccionarFondo(alarma)}}">
-        </tr>
-        </tbody>
-      </table>
-      <pagination-controls
-        previousLabel="Anterior"
-        nextLabel="Siguiente"
-        responsive="true"
-        (pageChange)="numPaginacion = $event"></pagination-controls>
+          </tr>
+          </tbody>
+        </table>
+        <pagination-controls
+          previousLabel="Anterior"
+          nextLabel="Siguiente"
+          responsive="true"
+          (pageChange)="numPaginacion = $event"></pagination-controls>
+      </div>
     </div>
   </div>
 </main>
