--- a/src/app/componentes/user/user-agendas-alarmas-resueltas/user-agendas-alarmas-resueltas.component.html
+++ b/src/app/componentes/user/user-agendas-alarmas-resueltas/user-agendas-alarmas-resueltas.component.html
@@ -3,10 +3,10 @@
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a [routerLink]="['/inicio']">Inicio</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Usuarios</li>
+        <li class="breadcrumb-item active" aria-current="page">Seguimiento Teleoperadores</li>
       </ol>
     </nav>
-    <h1 class="component-title">Usuarios del sistema</h1>
+    <h1 class="component-title">Seguimiento Teleoperadores</h1>
     <div class="form-group mb-3">
       <input id="campoBusqueda" type="text" class="form-control" placeholder="Busqueda..." [(ngModel)]="inputBusqueda">
     </div>
@@ -14,18 +14,18 @@
       <table id="tableList" class="table table-hover text-center">
         <thead>
         <tr class="table-purple">
-          <th class="ordenable" (click)="ordenacionTabla(0, 'string')" scope="col">Imagen <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(1, 'string')" scope="col">Nombre de usuario <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(2, 'string')" scope="col">Nombre <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(3, 'string')" scope="col">Apellidos <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(4, 'string')" scope="col">Email <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(5, 'string')" scope="col">Grupo <i class="fas fa-sort"></i></th>
+
+          <th class="ordenable" (click)="ordenacionTabla(0, 'Number')" scope="col">Id <i class="fas fa-sort"></i></th>
+          <th class="ordenable" (click)="ordenacionTabla(1, 'string')" scope="col">Nombre <i class="fas fa-sort"></i></th>
+          <th class="ordenable" (click)="ordenacionTabla(2, 'string')" scope="col">Apellidos <i class="fas fa-sort"></i></th>
+          <th class="ordenable" (click)="ordenacionTabla(3, 'Number')" scope="col">Alarmas Totales <i class="fas fa-sort"></i></th>
+          <th class="ordenable" (click)="ordenacionTabla(4, 'Number')" scope="col">Agendas Totales <i class="fas fa-sort"></i></th>
           <th scope="col"></th>
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let user of users | filtroBusqueda: inputBusqueda | paginate: { itemsPerPage: elementosPaginacion, currentPage: numPaginacion }"
-            app-item-user [user]="user">
+        <tr *ngFor="let teleoperador of teleoperadores | filtroBusqueda: inputBusqueda | paginate: { itemsPerPage: elementosPaginacion, currentPage: numPaginacion }"
+            app-item-teleoperador [teleoperador]="teleoperador">
         </tr>
         </tbody>
       </table>
