Punto 5: Fallo de prticion

--- a/src/app/componentes/user/user-agendas-alarmas-resueltas/user-agendas-alarmas-resueltas.component.html
+++ b/src/app/componentes/user/user-agendas-alarmas-resueltas/user-agendas-alarmas-resueltas.component.html
@@ -24,8 +24,9 @@
         </tr>
         </thead>
         <tbody>
+
         <tr *ngFor="let teleoperador of teleoperadores | filtroBusqueda: inputBusqueda | paginate: { itemsPerPage: elementosPaginacion, currentPage: numPaginacion }"
-            app-item-teleoperador [teleoperador]="teleoperador">
+            app-item-teleoperador [teleoperador]="teleoperador" ]>
         </tr>
         </tbody>
       </table>
