Punto 5: Casi terminado solo falta mostrar las alarmas y alertas

--- a/src/app/componentes/user/user-agendas-alarmas-resueltas/user-agendas-alarmas-resueltas.component.html
+++ b/src/app/componentes/user/user-agendas-alarmas-resueltas/user-agendas-alarmas-resueltas.component.html
@@ -25,8 +25,8 @@
         </thead>
         <tbody>
 
-        <tr *ngFor="let teleoperador of teleoperadores | filtroBusqueda: inputBusqueda | paginate: { itemsPerPage: elementosPaginacion, currentPage: numPaginacion }"
-            app-item-teleoperador [teleoperador]="teleoperador" ]>
+       <tr *ngFor="let teleoperador of teleoperadores | filtroBusqueda: inputBusqueda | paginate: { itemsPerPage: elementosPaginacion, currentPage: numPaginacion }"
+            app-item-teleoperador [teleoperador]="teleoperador" >
         </tr>
         </tbody>
       </table>
