--- a/src/app/componentes/seguimiento_teleoperador/lista-seguimiento-teleoperador/user-agendas-alarmas-resueltas.component.html
+++ b/src/app/componentes/seguimiento_teleoperador/lista-seguimiento-teleoperador/user-agendas-alarmas-resueltas.component.html
@@ -15,11 +15,11 @@
         <thead>
         <tr class="table-purple">
 
-          <th class="ordenable" (click)="ordenacionTabla(0, 'Number')" scope="col">Id <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(1, 'string')" scope="col">Nombre <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(2, 'string')" scope="col">Apellidos <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(3, 'Number')" scope="col">Alarmas Totales <i class="fas fa-sort"></i></th>
-          <th class="ordenable" (click)="ordenacionTabla(4, 'Number')" scope="col">Agendas Totales <i class="fas fa-sort"></i></th>
+
+          <th class="ordenable" (click)="ordenacionTabla(0, 'string')" scope="col">Nombre <i class="fas fa-sort"></i></th>
+          <th class="ordenable" (click)="ordenacionTabla(1, 'string')" scope="col">Apellidos <i class="fas fa-sort"></i></th>
+          <th class="ordenable" (click)="ordenacionTabla(2, 'number')" scope="col">Alarmas Totales <i class="fas fa-sort"></i></th>
+          <th class="ordenable" (click)="ordenacionTabla(3, 'string')" scope="col">Agendas Totales <i class="fas fa-sort"></i></th>
           <th scope="col"></th>
         </tr>
         </thead>
