Punto 5 preguntar Frederic

--- a/src/app/componentes/alarma/lista-alarmas/lista-alarmas.component.html
+++ b/src/app/componentes/alarma/lista-alarmas/lista-alarmas.component.html
@@ -104,4 +104,5 @@
       <pagination-controls previousLabel="Anterior" nextLabel="Siguiente" responsive="true" (pageChange)="numPaginacion = $event"></pagination-controls>
     </div>
   </div>
+  </div>
 </main>
