--- a/src/app/componentes/seguimiento_teleoperador/lista-alarmas-resueltas/lista-alarmas-resueltas.component.html
+++ b/src/app/componentes/seguimiento_teleoperador/lista-alarmas-resueltas/lista-alarmas-resueltas.component.html
@@ -3,67 +3,51 @@
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a [routerLink]="['/inicio']">Inicio</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Alarmas</li>
+        <li class="breadcrumb-item active" aria-current="page">
+          Agendas
+        </li>
       </ol>
     </nav>
+    <h1 class="component-title">
+
+    </h1>
 
 
-    <div class="m-2 row">
 
-      <h1 class="component-title">
-        {{ fecha }}
-        <button class="btn btn-warning ml-2" [routerLink]="['/boton_info_ayudas','listado_alarmas']">?</button>
+    <div style="display: none" id="actualizarPagina"></div>
 
-      </h1>
-
-
-      <div style="display: none" id="actualizarPagina"></div>
-      <div class="form-group mb-3">
-        <input id="campoBusqueda" type="text" class="form-control" placeholder="Busqueda..."
-               [(ngModel)]="inputBusqueda">
-      </div>
-
-      <div class="row mb-2 d-flex justify-content-end pad">
-        <div class="col p-0"></div>
+    <div class="form-group mb-3">
+      <input id="campoBusqueda" type="text" class="form-control" placeholder="Busqueda..." [(ngModel)]="inputBusqueda">
+    </div>
 
 
-        <div class="col p-0 d-flex align-items-end justify-content-end">
+    <div class="table-responsive m-2">
+      <table id="tableList" class="table table-hover text-center">
+        <thead>
+        <tr class="table-purple">
+          <th (click)="ordenacionTabla(0, 'string')" scope="col">Prioridad <i class="fas fa-sort"></i></th>
+          <th (click)="ordenacionTabla(1, 'string')" scope="col">Nombre <i class="fas fa-sort"></i></th>
+          <th (click)="ordenacionTabla(2, 'string')" scope="col">Apellido <i class="fas fa-sort"></i></th>
+          <th (click)="ordenacionTabla(3, 'string')" scope="col">Tipo Agenda <i class="fas fa-sort"></i></th>
+          <th (click)="ordenacionTabla(4, 'number')" scope="col">Nº Expediente <i class="fas fa-sort"></i></th>
+          <th (click)="ordenacionTabla(5, 'number')" scope="col">Hora prevista <i class="fas fa-sort"></i></th>
+          <th scope="col"></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr
 
-          <button class="btn btn-success" [routerLink]="['/alarmas/nueva']" *ngIf="isAdmin">Crear Alarma</button>
-        </div>
+          app-item-alarmas-resueltas [agendasResuelta]="agendas" >
+        </tr>
 
-      </div>
-
-
-      <div class="table-responsive m-2">
-        <table id="tableList" class="table table-hover text-center">
-          <thead>
-          <tr class="table-purple">
-            <th (click)="ordenacionTabla(0, 'string')" scope="col">Estado</th>
-            <th (click)="ordenacionTabla(1, 'string')" scope="col">Hora Registro</th>
-            <th (click)="ordenacionTabla(2, 'string')" scope="col">Observaciones</th>
-            <th (click)="ordenacionTabla(3, 'string')" scope="col">Resumen</th>
-            <th (click)="ordenacionTabla(4, 'string')" scope="col">Tipo alarma</th>
-            <th (click)="ordenacionTabla(5, 'string')" scope="col">Paciente UCR</th>
-            <th (click)="ordenacionTabla(6, 'string')" scope="col">Número Terminal</th>
-            <th (click)="ordenacionTabla(7, 'string')" scope="col">Teleoperador</th>
-            <th></th>
-          </tr>
-          </thead>
-          <tbody>
-
-          <tr
-            *ngFor="let alarma of alarmasDelDia| filtroBusqueda: inputBusqueda | paginate: { itemsPerPage: 10, currentPage: numPaginacion }"
-            app-item-alarmas-resueltas [alarma]="alarma" class="{{seleccionarFondo(alarma)}}">
-          </tr>
-          </tbody>
-        </table>
-        <pagination-controls
-          previousLabel="Anterior"
-          nextLabel="Siguiente"
-          responsive="true"
-          (pageChange)="numPaginacion = $event"></pagination-controls>
-      </div>
+        </tbody>
+      </table>
+      <pagination-controls
+        previousLabel="Anterior"
+        nextLabel="Siguiente"
+        responsive="true"
+        (pageChange)="numPaginacion = $event"></pagination-controls>
     </div>
   </div>
 </main>
+
