--- a/src/app/componentes/seguimiento_teleoperador/item-alarmas-resueltas/item-alarmas-resueltas.component.html
+++ b/src/app/componentes/seguimiento_teleoperador/item-alarmas-resueltas/item-alarmas-resueltas.component.html
@@ -1,7 +1,7 @@
-<td>{{ agenda.id_tipo_agenda?.importancia }}</td>
-<td>{{ agenda.id_paciente?.id_persona?.nombre }}</td>
-<td>{{ agenda.id_paciente?.id_persona?.apellidos }}</td>
-<td>{{ agenda.id_tipo_agenda?.nombre }}</td>
-<td>{{ n_expediente }}</td>
-<td>{{ agenda.fecha_prevista | date:'MMM d, y, h:mm:ss' }}</td>
-
+<td>{{ alarma.estado_alarma }}</td>
+<td>{{ alarma.fecha_registro | date : 'MMM d, y, h:mm:ss' }}</td>
+<td class="reducirCaja" [title]="alarma.observaciones">{{ alarma.observaciones }}</td>
+<td class="reducirCaja" [title]="alarma.resumen">{{ alarma.resumen }}</td>
+<td>{{ alarma.id_tipo_alarma?.nombre }} - {{ alarma.id_tipo_alarma?.id_clasificacion_alarma?.nombre }}</td>
+<td>{{ obtenerUcr()}}</td>
+<td>{{ obtenerTerminal()}}</td>
