--- a/src/app/componentes/seguimiento_teleoperador/item-teleoperador/item-teleoperador.component.html
+++ b/src/app/componentes/seguimiento_teleoperador/item-teleoperador/item-teleoperador.component.html
@@ -3,9 +3,9 @@
 <td>{{ teleoperador.alarmas_total}}</td>
 <td>{{ teleoperador.agendas_total}}</td>
 <td>
-  <button type="submit" class="btn btn-outline-secondary btn-modify"
+  <button type="submit" class="btn btn-outline-primary m-1"
           [routerLink]="['/lista-seguimiento-teleoperador/'+ teleoperador.id]">
-    <i class="fa-solid fa-eye" style="color: #6b6b6b;"></i>
+    <i class="fa-solid fa-eye"></i>
   </button>
 </td>
 
