--- a/src/app/componentes/seguimiento_teleoperador/lista-alarmas-resueltas/lista-alarmas-resueltas.component.html
+++ b/src/app/componentes/seguimiento_teleoperador/lista-alarmas-resueltas/lista-alarmas-resueltas.component.html
@@ -17,6 +17,7 @@
 
     <div class="form-group mb-3">
       <input id="campoBusqueda" type="text" class="form-control" placeholder="Busqueda..." [(ngModel)]="inputBusqueda">
+      <h5>Agendas: {{peticion.agendas_total}}</h5>
     </div>
 
 
@@ -29,7 +30,7 @@
           <th (click)="ordenacionTabla(2, 'string')" scope="col">Apellido <i class="fas fa-sort"></i></th>
           <th (click)="ordenacionTabla(3, 'string')" scope="col">Tipo Agenda <i class="fas fa-sort"></i></th>
           <th (click)="ordenacionTabla(4, 'number')" scope="col">Nº Expediente <i class="fas fa-sort"></i></th>
-          <th (click)="ordenacionTabla(5, 'number')" scope="col">Fecha <i class="fas fa-sort"></i></th>
+          <th (click)="ordenacionTabla(5, 'numbre')" scope="col">Hora y Fecha <i class="fas fa-sort"></i></th>
 
           <th scope="col"></th>
         </tr>
@@ -37,7 +38,7 @@
         <tbody>
         <tr
           *ngFor="let agenda of agendas | filtroBusqueda: inputBusqueda | paginate: { itemsPerPage: 10, currentPage: numPaginacion }"
-          app-item-alarmas-resueltas [agenda]="agenda.id_agenda"
+          app-item-agendas-resueltas [agenda]="agenda.id_agenda"
           class="{{agenda.fecha_resolucion === null ? 'noResuelta' : 'resuelta'}}">
         </tr>
 
@@ -49,30 +50,30 @@
         responsive="true"
         (pageChange)="numPaginacion = $event"></pagination-controls>
     </div>
+
+    <h5>Alarmas: {{peticion.alarmas_total}}</h5>
     <div class="table-responsive m-2">
-      <table id="tableList" class="table table-hover text-center">
+      <table id="tableLista" class="table table-hover text-center">
         <thead>
         <tr class="table-purple">
-          <th (click)="ordenacionTabla(0, 'string')" scope="col">Prioridad <i class="fas fa-sort"></i></th>
-          <th (click)="ordenacionTabla(1, 'string')" scope="col">Nombre <i class="fas fa-sort"></i></th>
-          <th (click)="ordenacionTabla(2, 'string')" scope="col">Apellido <i class="fas fa-sort"></i></th>
-          <th (click)="ordenacionTabla(3, 'string')" scope="col">Tipo Agenda <i class="fas fa-sort"></i></th>
-          <th (click)="ordenacionTabla(4, 'number')" scope="col">Nº Expediente <i class="fas fa-sort"></i></th>
-          <th (click)="ordenacionTabla(5, 'number')" scope="col">Fecha <i class="fas fa-sort"></i></th>
+          <th (click)="ordenacionTablas(0, 'string')" scope="col">Estado <i class="fas fa-sort"></i></th>
+          <th (click)="ordenacionTablas(1, 'string')" scope="col">Hora y Fecha Registro <i class="fas fa-sort"></i></th>
+          <th (click)="ordenacionTablas(2, 'string')" scope="col">Observaciones <i class="fas fa-sort"></i></th>
+          <th (click)="ordenacionTablas(3, 'string')" scope="col">Resumen <i class="fas fa-sort"></i></th>
+          <th (click)="ordenacionTablas(4, 'string')" scope="col">Tipo alarma <i class="fas fa-sort"></i></th>
+          <th (click)="ordenacionTablas(5, 'string')" scope="col">Paciente UCR <i class="fas fa-sort"></i></th>
+          <th (click)="ordenacionTablas(6, 'number')" scope="col">Número Terminal <i class="fas fa-sort"></i></th>
 
-          <th scope="col"></th>
         </tr>
         </thead>
         <tbody>
-        <tr></tr>
 
+        <tr *ngFor="let alarma of alarmas| filtroBusqueda: inputBusqueda | paginate: { itemsPerPage: 10, currentPage: numPaginacion }"
+            item-alarmas-resueltas [alarma]="alarma" class="{{seleccionarFondo(alarma)}}">
+        </tr>
         </tbody>
       </table>
-      <pagination-controls
-        previousLabel="Anterior"
-        nextLabel="Siguiente"
-        responsive="true"
-        (pageChange)="numPaginacion = $event"></pagination-controls>
+      <pagination-controls previousLabel="Anterior" nextLabel="Siguiente" responsive="true" (pageChange)="numPaginacion = $event"></pagination-controls>
     </div>
 
   </div>
