--- a/src/app/componentes/boton-info-ayudas/boton-info-ayudas.component.html
+++ b/src/app/componentes/boton-info-ayudas/boton-info-ayudas.component.html
@@ -1,2 +1,2 @@
-<h1>{{contenido.titulo}}</h1>
-<p [innerHTML]="contenido.contenido"></p>
+<div class="segundoTitle"><p [innerHTML]="contenido.segundo_titulo"></p></div>
+<div class="texto rounded"><p [innerHTML]="contenido.contenido"></p></div>
