--- a/src/app/componentes/alarma/lista-alarmas/lista-alarmas.component.html
+++ b/src/app/componentes/alarma/lista-alarmas/lista-alarmas.component.html
@@ -12,7 +12,7 @@
 
 
       <h1 class="component-title">
-        {{ fecha }} <a class="btn btn-warning ml-2 boton" target="_blank"
+        {{ fecha }} <a class="btn btn-warning ml-2 botonAyuda" target="_blank"
                        [routerLink]="['/boton_info_ayudas','listado_alarmas']">?</a>
       </h1>
 
