Reorganizado el código

--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -67,18 +67,12 @@
             Seguimiento teleoperadores
           </a>
         </li>
-        <li class="nav p-1 mr-1 " *ngIf="isAdmin">
-          <a class="nav-link" href="#" [routerLink]="['/']">
-            Copia de seguridad
-          </a>
-        </li>
-
       </ul>
     </div>
   </div>
 <!--  Spinner de peticiones-->
   <div class="spinner d-none ">
-    <img src="https://media.tenor.com/hlKEXPvlX48AAAAi/loading-loader.gif"/>
+    <img src="./assets/spinner.gif"/>
   </div>
 </nav>
 
