Mostrar error si el usuario no es válido < 4 caracteres

--- a/src/app/componentes/pantalla-login/pantalla-login.component.html
+++ b/src/app/componentes/pantalla-login/pantalla-login.component.html
@@ -21,7 +21,7 @@
                 <div *ngIf="username.errors?.required">
                   El nombre de usuario es obligatorio
                 </div>
-                <div *ngIf="username.errors?.pattern">
+                <div *ngIf="username.errors">
                   Introduzca un nombre de usuario válido
                 </div>
               </div>
