--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -148,8 +148,8 @@
             <div class="tabcontent" id="{{desarrollador.nombre}}">
               <div class="container">
                 <div class="divTitulosDesarrollador row">
-                  <div class="col-3 col-md-5 col-sm-8 ps-5 pb-2"><img class="imagenDesarrollador" [src]="desarrollador.imagen" [title]="desarrollador.nombre" /></div>
-                  <div class="divImagenesDesarrollador col-6 pt-4 text-center">
+                  <div class="col-5  col-sm-5 col-lg-3 ps-5"><img class="imagenDesarrollador mb-2" [src]="desarrollador.imagen" [title]="desarrollador.nombre" /></div>
+                  <div class="divImagenesDesarrollador col-7 col-sm-6 col-lg-7 pt-4 text-center">
                     <span class="style">{{desarrollador.nombre}}</span>
                   </div>
                 </div>
@@ -175,8 +175,8 @@
             <div *ngIf="convocatoria.desarrolladores.indexOf(desarrollador) >= 0" class="tabcontent" id="{{desarrollador.nombre}}">
               <div class="container">
                 <div class="divTitulosDesarrollador row">
-                  <div class="col-6 col-md-5 col-sm-6 ps-5 pb-2"><img class="imagenDesarrollador" [src]="desarrollador.imagen" [title]="desarrollador.nombre" /></div>
-                  <div class="divImagenesDesarrollador col-6 col-md-4 col-sm-4 pt-4 text-center">
+                  <div class="col-5  col-sm-5 col-lg-3 ps-5"><img class="imagenDesarrollador mb-2" [src]="desarrollador.imagen" [title]="desarrollador.nombre" /></div>
+                  <div class="divImagenesDesarrollador col-7 col-sm-6 col-lg-7 pt-4 text-center">
                       <span class="style">{{desarrollador.nombre}}</span>
                       <div class="divTecnologias row justify-content-md-center">
                         <ng-container *ngFor="let tecnologia of desarrollador.desarrollador_tecnologias">
