--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -124,9 +124,8 @@
         </h2>
         <p class="lead">El software ha sido desarrollado bajo la licencia <abbr
           title="GNU General Public License, versión 3">GPL3</abbr> por el departamento de Informática del
-          IES <em>“Valle del Jerte”</em> de Plasencia, con la colaboración principal de Fréderic Sánchez, Angel Enrique
-          Pineda y Jesús Redondo.</p>
-        <p class="lead">Especial mención al departamento de Atención Sociosanitaria del IES “San Martín” de Talayuela. Partícipes e impulsores de la plataforma de prácticas de teleasistencia
+          IES <em>“Valle del Jerte”</em> de Plasencia, siendo los analistas del software y coordinadores principales los profesores <b>Fréderic Sánchez, Enrique Pineda y Jesús Redondo</b>.</p>
+        <p class="lead">Especial mención al departamento de Servicios Socioculturales y a la Comunidad del IES “San Martín” de Talayuela. Partícipes e impulsores de la plataforma de prácticas de teleasistencia.
         </p>
         <p class="lead">Los alumnos que han contribuido en el desarrollo de este proyecto son:</p>
       </div>
