--- a/src/app/componentes/usuarios-del-servicio/consultar-users-servicio/consultar-users-servicio.component.html
+++ b/src/app/componentes/usuarios-del-servicio/consultar-users-servicio/consultar-users-servicio.component.html
@@ -29,7 +29,7 @@
           <th (click)="ordenacionTabla(0, 'string')" scope="col">Nombre y Apellidos</th>
           <th (click)="ordenacionTabla(1, 'string')" scope="col">Tipo modalidad usuario</th>
           <th (click)="ordenacionTabla(2, 'string')" scope="col">Localidad</th>
-          <th (click)="ordenacionTabla(3, 'string')" scope="col">Historia clínica</th>
+          <th (click)="ordenacionTabla(3, 'string')" scope="col">Observaciones</th>
           <th (click)="ordenacionTabla(4, 'string')" scope="col">Dispositivos Periféricos</th>
           <th (click)="ordenacionTabla(5, 'string')" scope="col">Situacion Terminal</th>
           <th>
