Fixed Añadir a NUSS un title o indicar entre paréntesis que es el número de usuario de la seguridad social (aparece en la diapositiva anterior). #51

--- a/src/app/componentes/datos-sanitario/crear-datos-sanitarios/crear-datos-sanitarios.component.html
+++ b/src/app/componentes/datos-sanitario/crear-datos-sanitarios/crear-datos-sanitarios.component.html
@@ -6,7 +6,7 @@
           <div class="col-12">
 
             <div class="form-group">
-              <label for="nuss" class="form-label">NUSS <span class="obligatorios">*</span></label>
+              <label for="nuss" class="form-label">NUSS (Número de usuario de la seguridad social)<span class="obligatorios">*</span></label>
               <input type="text" name="nuss" id="nuss" class="form-control" formControlName="nuss">
               <div *ngIf="nuss.invalid && (nuss.dirty || nuss.touched)"
                    class="alert alert-secondary text-center" role="alert">
