--- a/src/app/componentes/datos-sanitario/editar-datos-sanitario/editar-datos-sanitario.component.html
+++ b/src/app/componentes/datos-sanitario/editar-datos-sanitario/editar-datos-sanitario.component.html
@@ -6,7 +6,7 @@
           <div class="col-12">
 
             <div class="form-group">
-              <label for="nuss" class="form-label">NUSS <span class="obligatorios">*</span></label>
+              <label for="nuss" class="form-label">NUSS (Número de usuario de la seguridad social)<span class="obligatorios">*</span></label>
               <input type="text" name="nuss" id="nuss" class="form-control" formControlName="nuss"
                      [readonly]="blockEditar">
               <div *ngIf="nuss.invalid && (nuss.dirty || nuss.touched)"
