Aparece el nombre recurso comunitario en vez de “Crear nuevo recurso ****” con el tipo de recurso que corresponda (ver captura de pantalla anterior). #53

--- a/src/app/components/recursos/recurso-comunitario/crear-recurso-comunitario/crear-recurso-comunitario.component.html
+++ b/src/app/components/recursos/recurso-comunitario/crear-recurso-comunitario/crear-recurso-comunitario.component.html
@@ -9,7 +9,7 @@
     </nav>
     <div class="row d-flex justify-content-center">
     <div class="col-12 col-xl-6">
-    <h1 class="component-title">Crear nuevo recurso comunitario</h1>
+    <h1 class="component-title">Crear nuevo recurso {{clasificacion?.nombre}}</h1>
     <form [formGroup]="nuevoRecurso" (ngSubmit)="nuevoRecursoComunitario()" [ngClass]="this.mostrar || this.mostrarModificar ? 'inactiveForm':''">
       <div class="form-group mb-3">
         <label for="nombre" class="form-label">Nombre</label>
