--- a/src/app/components/recursos/recurso-comunitario/modificar-recurso-comunitario/modificar-recurso-comunitario.component.html
+++ b/src/app/components/recursos/recurso-comunitario/modificar-recurso-comunitario/modificar-recurso-comunitario.component.html
@@ -7,7 +7,7 @@
       <li class="breadcrumb-item active" aria-current="page">Modificar recurso comunitario</li>
     </ol>
   </nav>
-  <h1 class="component-title">Modificar datos recurso comunitario {{idRecursoComunitario}}</h1>
+  <h1 class="component-title">Modificar recurso {{clasificacion?.nombre}} {{idRecursoComunitario}}</h1>
   <form [formGroup]="editarRecurso">
     <div class="form-group mb-3">
       <label for="nombre" class="form-label">Nombre</label>
