--- a/src/app/components/recursos/recurso-comunitario/lista-recursos-comunitarios/lista-recursos-comunitarios.component.html
+++ b/src/app/components/recursos/recurso-comunitario/lista-recursos-comunitarios/lista-recursos-comunitarios.component.html
@@ -3,7 +3,7 @@
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a [routerLink]="['/inicio']">Inicio</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Recursos comunitarios</li>
+        <li class="breadcrumb-item active" aria-current="page">Recursos {{clasificacion?.nombre}}</li>
       </ol>
     </nav>
     <h1 class="component-title">Recursos {{clasificacion?.nombre}}</h1>
